More images and descriptions

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <div class="main-circle ">
                 </div>
                 <div class="main-image">
-                    <img id="shark-image" src="" alt="">
+                    <img id="shark-image" src="#" alt="">
+                    <img id="shark-photo" src="#" alt="">
                 </div>
             </div>
         </div>
